--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Require JS Optimization Demo</title>
 	<link rel="Stylesheet" href="css/styles.css">
-	<script src="js/lib/modernizr-latest.js"></script>
+	<!--<script src="js/lib/modernizr-latest.js"></script>-->
 </head>
 <body>
 
@@ -21,6 +21,7 @@
 	</footer>
 
 	
-	<script data-main="js/app" src="js/lib/require.js"></script>
+	<script data-main="js/app.min" src="js/lib/require.min.js"></script> <!-- 3 requests, 105KB -->
+	<!--<script data-main="js/app" src="js/lib/require.js"></script>--> <!-- 22 requests, 429KB -->
 </body>
 </html>
